--- a/style.css
+++ b/style.css
@@ -2,49 +2,69 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css";
 
 body {
-    height: 100vh;
-    background-color: #efefef;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  height: 100vh;
+  background-color: #efefef;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#player {
-    background-color: #000;
-    width: 90%;
-    max-width: 375px;
-    box-shadow: 0px 2px 2px 0px rgb(0, 0, 0.12),
-        0px 3px 1px -2px  rgb(0, 0, 0.12), 0px 1px 5px 0px rgb(0, 0, 0.2)
+.player {
+  background-color: #000;
+  width: 90%;
+  max-width: 375px;
+  box-shadow: 0px 2px 2px 0px rgb(0, 0, 0.12),
+    0px 3px 1px -2px  rgb(0, 0, 0.12), 0px 1px 5px 0px rgb(0, 0, 0.2)
     
 }
 .no-margin {
-    box-shadow: none;
-    margin: 0;
+  box-shadow: none;
+  margin: 0;
+}
+
+i{
+  cursor: pointer;
+}
+
+.controls{
+  color: #7159c1;
 }
 
 h4{
-    color: #7159c1;
-    font-size: 20px;
-    font-weight: bold;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 12px;
+  color: #7159c1;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
+}
+
+.menu{
+  float: right;
+  color: gray;
+  margin: 10px;
+}
+
+.controls{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
 }
 
 .card-image{
-    background-color:url("https://placehold.it/ 500") no-repeat center center / cover;
-    height: 200px;
+  background-color:url("https://placehold.it/ 500") no-repeat center center / cover;
+  height: 200px;
 }
 
 audio{
-    width: 100%;
-    margin-top: 30px;
+  width: 80%;
 }
 .card-content{
-    background-color: #000;
-    color: silver
+  background-color: #000;
+  color: silver
 }
 /* audio::-webkit-media-controls-timeline { display:inline-flex;} */
-audio::-webkit-media-controls-panel {background-color:silver;}
+audio::-webkit-media-controls-panel {background-color:rgb(192, 192, 192);}
